--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -184,6 +184,10 @@ body.dark-mode .dropdown-menu a {
   color: #f0f0f0;
 }
 
+body.dark-mode .register{
+  color: purple !important;
+}
+
 body.dark-mode header {
   background-color: #1f1f1f;
 }
@@ -191,6 +195,10 @@ body.dark-mode header {
 body.dark-mode .dropdown-menu {
   background-color: #333;
   color: #f0f0f0;
+}
+
+body.dark-mode .logout{
+  color: black !important;
 }
 
 body.dark-mode .dropdown-menu a:hover {
