--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -59,3 +59,12 @@
     line-height: 1;
     color: inherit;
 }
+
+body.dark-mode .background{
+    background-color: black;
+
+}
+
+body.dark-mode a{
+
+}
