--- a/app/templates/instellingen.html
+++ b/app/templates/instellingen.html
@@ -60,18 +60,7 @@
                 <input type="email" class="form-control" id="email" name="email" value="{{ user.email }}">
             </div>
 
-            <div class="mb-3">
-                <label for="abonnement" class="form-label">Abonnement</label>
-                <select class="form-select" id="abonnement" name="abonnement">
-                    <option value="Geen abonnement" {% if user.abonnement == 'Geen abonnement' %}selected{% endif %}>Geen abonnement</option>
-                    <option value="Dagpas" {% if user.abonnement == 'Dagpas' %}selected{% endif %}>Dagpas</option>
-                    <option value="Weekpas" {% if user.abonnement == 'Weekpas' %}selected{% endif %}>Weekpas</option>
-                    <option value="maandpas" {% if user.abonnement == 'maandpas' %}selected{% endif %}>maandpas</option>
-                    <option value="Jaarkaart" {% if user.abonnement == 'Jaarkaart' %}selected{% endif %}>Jaarkaart</option>
-                </select>
-            </div>
-
-        <form method="POST" action="{{ url_for('routes.profile') }}"> -->
+        <form method="POST" action="{{ url_for('routes.profile') }}">
             <button type="submit" class="btn btn-primary">Opslaan</button>
             <a href="{{ url_for('routes.profile') }}" class="btn btn-secondary">Annuleren</a>
         </form>
