--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -185,7 +185,7 @@ body.dark-mode .dropdown-menu a {
 }
 
 body.dark-mode .register{
-  color: purple !important;
+  color: black !important;
 }
 
 body.dark-mode header {
