--- a/app/static/css/instellingen.css
+++ b/app/static/css/instellingen.css
@@ -193,7 +193,7 @@ body.dark-mode .btn {
 }
 
 body.dark-mode .background{
-    background-color: black;
+    background-color: black; !important;
 }
 
 body.dark-mode .btn.btn-outline-primary{
